Fixed sidebar scrolling problem on mobile devices

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -79,6 +79,7 @@
         bottom: 0;
         left: 0;
         right: auto;
+        touch-action: none;
         
         transition: transform $sidebar-overlay-transition;
 
